kanya quote added

--- a/kanye.html
+++ b/kanye.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
+    <h2>Kanye Quotes!</h2>
+    <button onclick="loadQuotes()">Fresh Kanye</button>
+    <blockquote id="quote">
+    </blockquote>
 
-    <script src="js/kanye.js"></script>
+    <script src="kanye.js"></script>
 </body>
 
 </html>
